Issue #18038: SyntaxError raised during compilation sources with illegal encoding now always contains an encoding name.